nginx.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: web
spec:
  serviceName: "nginx"
  replicas: 4
  podManagementPolicy: Parallel
  selector:
    matchLabels:
      app: nginx
      app.kubernetes.io/name: nginx
  template:
    metadata:
      labels:
        app: nginx
        app.kubernetes.io/name: nginx
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - nginx
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: nginx
        image: k8s.gcr.io/nginx-slim:0.8
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: www
          mountPath: /usr/share/nginx/html
        - name: data
          mountPath: /usr/share/nginx/data
        - name: logs
          mountPath: /usr/share/nginx/logs
  volumeClaimTemplates:
  - metadata:
      name: www
    spec:
      storageClassName: direct-csi-min-io
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 60Mi
  - metadata:
      name: data
    spec:
      storageClassName: direct-csi-min-io
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 60Mi
  - metadata:
      name: logs
    spec:
      storageClassName: direct-csi-min-io
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 60Mi
